--- a/css/theospatial.css
+++ b/css/theospatial.css
@@ -124,7 +124,7 @@ Removes the underline with text decoration = none.*/
   .main{
 	padding-top: 6rem;
 	
-    background-image: linear-gradient(-15deg, #F59F7E , #C27E64/*, #23A6D5, #3d8*/);
+    background-image: linear-gradient(-15deg, rgb(53, 53, 53) , rgb(32, 32, 32)/*, #23A6D5, #3d8*/);
   }
   
   .container {
