--- a/css/theospatial.css
+++ b/css/theospatial.css
@@ -149,7 +149,7 @@ Removes the underline with text decoration = none.*/
   
   .main{
 	padding-top: 7rem;
-    background-image: linear-gradient(-15deg, #F59F7E , #C27E64/*, #23A6D5, #3d8*/);
+    background-image: linear-gradient(-15deg, rgb(54, 54, 54) , rgb(15, 15, 15)/*, #23A6D5, #3d8*/);
 	background-attachment: fixed;
   }
   
